--- a/src/main/js/finki-timetable/package.json
+++ b/src/main/js/finki-timetable/package.json
@@ -8,13 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-cookie": "^4.0.3",
+    "react-date-picker": "^8.0.5",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.1",
     "react-timetable-events": "^1.0.2"
   },
   "scripts": {
